Minor fix: alignment of skills modifier

--- a/app/app.css
+++ b/app/app.css
@@ -207,6 +207,7 @@ html {
     line-height: 15px;
     font-size: 13px;
     text-align: center;
+    vertical-align: bottom;
 }
 
 .skills__name {
